BUG: overflow fix

--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,7 @@ body {
 }
 
 .container {
-  width: 90%;
-  max-width: 1440px;
+  width: 90vw;
   margin: 0 auto;
 }
 
